--- a/l10n_fi_invoice_numbers/views/account_invoice_views.xml
+++ b/l10n_fi_invoice_numbers/views/account_invoice_views.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <!-- Invoice form modifications -->
-    <record id="view_account_invoice_form_finnish" model="ir.ui.view">
-        <field name="name">account.invoice.form.finnish</field>
-        <field name="model">account.invoice</field>
-        <field name="inherit_id" ref="account.invoice_form"/>
+    <record id="view_account_move_form_finnish" model="ir.ui.view">
+        <field name="name">account.move.form.finnish</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.move"/>
         <field name="arch" type="xml">
             <xpath expr="//page[@name='other_info']//group/field[@name='name']" position="after">
                 <field name="invoice_number"/>
