--- a/l10n_fi_invoice_numbers/views/account_invoice_views.xml
+++ b/l10n_fi_invoice_numbers/views/account_invoice_views.xml
@@ -7,8 +7,8 @@
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
             <xpath expr="//page[@name='other_info']//group/field[@name='partner_bank_id']" position="after">
-                <field name="invoice_number"/>
-                <field name="ref_number"/>
+                <field name="payment_reference"/>
+                <field name="invoice_origin"/>
             </xpath>
         </field>
     </record>
